--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zingnews",
+  "name": "netflix-clone",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,10 +7,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.20.0-alpha.1",
+    "axios": "^0.26.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
-    "react-scripts": "5.0.1"
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "sass": "^1.50.1"
   },
   "scripts": {
     "start": "react-scripts start",
